Drag&drop functionality for the categorical tree finished - interaction with tables introduced, drag area marking improved. Related to #51.

--- a/app/views/dataset/distribution.scala.html
+++ b/app/views/dataset/distribution.scala.html
@@ -87,6 +87,8 @@
 
             activateAllFilters(function(filterOrId) {calcDistribution()})
 
+            // drag-and-drop funs
+
             $('#sideCategoricalTree').on('nodeSelected', function (event, data) {
                 $('#inputDiv #fieldName').val(data.id)
                 $('#inputDiv #fieldTypeahead').val(data.text)
