Removing checkboxes in the view tables. Closes #55.

--- a/app/views/dataset/dataSetTable.scala.html
+++ b/app/views/dataset/dataSetTable.scala.html
@@ -18,9 +18,12 @@
     @jsonTable(
         page,
         tableFields,
-        dataSetRouter.generateTable(_, _,
+        dataSetRouter.generateTable(
+            _,
+            _,
             tableFields.map(_.name).toSeq,
-            filter.map(_.conditionsOrId).getOrElse(Left(Nil))
+            filter.map(_.conditionsOrId).getOrElse(Left(Nil)),
+            tableSelection
         ),
         Some(dataSetRouter.get),
         withRowClickableJs,
