--- a/app/views/dataset/comparison.scala.html
+++ b/app/views/dataset/comparison.scala.html
@@ -46,15 +46,18 @@
             activateAllFilters(function(filterOrId) {calcComparison()})
 
             $('#sideCategoricalTree').on('nodeSelected', function (event, data) {
-                $('#inputDiv #fieldName').val(data.id)
-                $('#inputDiv #fieldTypeahead').val(data.text)
-                calcComparison();
+                if(["field-Boolean", "field-Enum", "field-String", "field-Double", "field-Integer", "field-Date"].includes(data.type)) {
+                    $('#inputDiv #fieldName').val(data.id)
+                    $('#inputDiv #fieldTypeahead').val(data.text)
+                    calcComparison();
+                }
             });
 
             enableFieldDragover(
                 $('#inputDiv #fieldName'),
                 $('#inputDiv #fieldTypeahead'),
-                calcComparison
+                calcComparison,
+                ["field-Boolean", "field-Enum", "field-String", "field-Double", "field-Integer", "field-Date"]
             )
         });
 
