View generalized - show and action sub types. Relates to ada-discovery/ada-issues#70.

--- a/app/views/dataset/dataSetTable.scala.html
+++ b/app/views/dataset/dataSetTable.scala.html
@@ -9,7 +9,7 @@
     filter: Option[Filter],
     tableFields: Traversable[Field],
     withRowClickableJs: Boolean = false,
-    tableSelection: Boolean = false
+    tableRowSelection: Boolean = false
 )(
     implicit request: Request[_], dataSetRouter: DataSetRouter
 )
@@ -23,11 +23,11 @@
             _,
             tableFields.map(_.name).toSeq,
             filter.map(_.conditionsOrId).getOrElse(Left(Nil)),
-            tableSelection
+            tableRowSelection
         ),
         Some(dataSetRouter.get),
         withRowClickableJs,
         true,
-        tableSelection
+        tableRowSelection
     )
 }
