--- a/app/views/layout/edit.scala.html
+++ b/app/views/layout/edit.scala.html
@@ -14,10 +14,20 @@
     sideBar: Option[Html] = None,
     topContentBar: Option[Html] = None,
     bottomResources: Option[Html] = None,
+    deleteConfirmationPrompt: Boolean = true,
     formArgs: Seq[(Symbol, String)] = Nil
 )(
     implicit context: WebContext
 )
+
+@deleteSureButtons = {
+    <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+    <button type="button" class="btn btn-default" onclick="submit('post', '@deleteCall.get'); return false;">Yes</button>
+}
+
+@deleteSureModalInner = {
+    <p>Are you sure you want to delete this @{displayName.toLowerCase}?</p>
+}
 
 @main(Messages("edit.title", displayName), sideBar, topContentBar, None, bottomResources, Some(formErrors(messagePrefix, errors))) {
 
@@ -38,10 +48,16 @@
                 <input type="submit" value="Update" class="btn btn-primary">
                 <a href="@cancelCall" class="btn btn-default">Cancel</a>
                 @if(deleteCall.isDefined) {
-                    <a href="#" class="btn btn-danger" onclick='submit("post", "@deleteCall.get")'>Delete</a>
+                    @if(deleteConfirmationPrompt) {
+                        <a class="btn btn-danger" data-toggle="modal" data-target="#deleteSureModalConfirmation">Delete</a>
+                    } else {
+                        <a href="#" class="btn btn-danger" onclick='submit("post", "@deleteCall.get")'>Delete</a>
+                    }
                 }
             </div>
         }
         </div>
+
+        @modal("deleteSureModalConfirmation", "Confirmation", deleteSureModalInner, None, Some(deleteSureButtons))
     </div>
 }
