Data set typeahead added to user permission modals.

--- a/app/views/datasettrans/dataSetTypeahead.scala.html
+++ b/app/views/datasettrans/dataSetTypeahead.scala.html
@@ -57,7 +57,7 @@
         populateFieldTypeahedFromUrl(
             $('#@{fieldName}Typeahead'),
             $('#@{fieldName}'),
-            '@Html(routes.DataSetTransformationController.dataSetIds().url)',
+            '@Html(org.ada.web.controllers.routes.AdminController.dataSetIds().url)',
             @FilterShowFieldStyle.LabelsOnly.id,
             addSelectedListener,
             true
