--- a/app/views/datasettrans/mergeMultiDataSetsElements.scala.html
+++ b/app/views/datasettrans/mergeMultiDataSetsElements.scala.html
@@ -49,7 +49,7 @@
         populateFieldTypeahedFromUrl(
             $('#add_sourceDataSetIdModal').find('#dataSetTypeahead'),
             $('#add_sourceDataSetIdModal').find('#dataSetId'),
-            '@Html(routes.DataSetTransformationController.dataSetIds().url)',
+            '@Html(org.ada.web.controllers.routes.AdminController.dataSetIds().url)',
             @FilterShowFieldStyle.LabelsOnly.id
         )
 
