removed some ambiguous stats

--- a/app/views/layout/dataSets.scala.html
+++ b/app/views/layout/dataSets.scala.html
@@ -133,6 +133,6 @@
         }
         <h3><i>Welcome @userName!</i></h3>
         <br/>
-        You have currently access to @badge(dataSetsNum) data sets organized into @badge(dataSpacesNum) data spaces out of which @badge(dataSpaceMetaInfos.size) are the top level ones (aka studies/projects).
+        You currently have access to @badge(dataSpaceMetaInfos.size) project(s).
     </div>
 }
